--- a/assets/css/design_style.css
+++ b/assets/css/design_style.css
@@ -3,14 +3,17 @@ body {
     margin:0;
   }
   .bg{
-      background-image: url("../image/coffee4.jpg");
-      background-color: black;
-      opacity: 0.99;
-      z-index:1;
+	  background-image: url("../image/coffee4.jpg");
+	  z-index: -5;	
   }
   .bg_color{
-    
+    background-color: #3b3d47;
+	opacity: 0.50;
+   
+
+      
   }
+  
   .nav-img{
       text-align:center;
       padding-top:40px;
@@ -19,6 +22,7 @@ body {
       color:white;
       padding: 20px 2px;
       font-style: bold;
+	  text-align: center;
       
   }  
     
@@ -62,3 +66,269 @@ body {
             z-index:1;
       
      }
+	 .bg-color{
+		background-color:#f7f7f7;
+	 }
+	 .heading{
+		text-align:center;
+		color: #C9AD85;
+		padding-bottom:50px;
+
+	 }
+	 .padding-align{
+		padding:50px;
+	 }
+	 .para-text{
+		text-align:center;
+		padding-bottom: 30px;
+		
+	 }
+	.aligns{
+		text-align:center;
+		padding-bottom:30px;
+		z-index: 5;
+		
+	}
+	.backgrnd{
+		
+		 background-image: linear-gradient(180deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../image/coffee4.jpg);
+		 z-index: 5; 
+	}
+	.bgcolors{
+		background-color:#3b3d47;
+		z-index: 5;
+	}
+	.card{
+	width:100%;
+	height:90% !important;
+	background-color:#3b3d47!important;
+	box-shadow:2px 2px 2px 2px gray !important;
+	z-index: 2;
+	border-radius: 10px	!important;
+	
+	}
+	.icon3{
+		  color:white;
+		  font-size: 100px !important;
+		  /* padding-right:20px; */
+		  text-align: center;
+		  background-color:#C9AD85;
+		  padding-top: 30px;
+		  padding-bottom: 30px;
+		  z-index:1000;
+		 
+	}
+	.icon-set{
+		background-color:#C9AD85;
+		
+	}
+	.pad-icon{
+		/* padding-top: 30px;
+		padding-bottom: 30px; */
+		background-color:#C9AD85;
+		border-radius: 10px 10px;
+		
+	}
+	
+	.pg{
+		padding-top:20px;
+		color:#C9AD85;
+	}
+	.back-color{
+		background-color:#3b3d47 !important;
+		padding-top:20px;
+		padding-bottom: 40px;
+		text-align: center;
+		padding:20px;
+	}
+	.paras{
+		color:#C9AD85;
+	}
+	.aligns{
+	color:#C9AD85; 
+	font-weight: bold;
+	z-index:2;
+	padding-bottom: 50px;
+	} 
+	/* .vl {
+		border-left: 3px solid #C9AD85;
+		height: 50px;
+		
+		left: 50%;
+		margin-left: -3px;
+		margin: auto;
+    	width: 7px;
+	
+	  }
+	  .w3-badge{
+		  background-color: #C9AD85 !important;
+	  }
+	  .al-center{
+		  text-align: center;
+	  }
+	  .h4-label{
+		  color:#C9AD85;
+		  
+		 
+	  }
+	  .badge-text{
+		  color:#C9AD85;
+
+	  } */
+	  /* .row{
+		  padding-bottom: 100px;
+	  } */
+	  
+	  .para-aa h4{
+		color:#C9AD85;
+	  }
+	  .para-aa1 h4{
+		color:#C9AD85;
+	  }
+	  .para-aa{
+		 text-align: right;
+		 
+		 
+	  }
+	  .numbers{
+		  width:50px;
+		  height:50px;
+		  border-radius: 50%;
+		  padding: 15px; 
+		  background-color:#C9AD85;
+		  float:right;
+		  margin-top:-70px;
+		  margin-right: -70px;
+	  }
+	  .para-aa1{
+		text-align: left;
+		margin-left:50px;
+		
+	 }
+	 
+	
+	  .numbers1{
+		width:50px;
+		height:50px;
+		border-radius: 50%;
+		padding: 15px; 
+		background-color:#C9AD85;
+		float:left;
+		margin-top:-85px;
+		margin-left: -60px;
+	}
+	.vl {
+		border-left: 3px solid #C9AD85;
+		height: 55px;
+		
+		left: 50%;
+		
+		margin: auto;
+    	width: 7px;
+	
+	  }
+	  .padding-setting{
+		  padding-top:50px;
+		  padding-bottom:50px;
+	  }
+	 
+
+
+/* Slideshow container */
+.slideshow-container {
+  position: relative;
+  
+}
+
+/* Slides */
+.mySlides {
+  display: none;
+  padding: 80px;
+  text-align: center;
+  color:#C9AD85;
+  text-align: justify;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -30px;
+  padding: 16px;
+  color: #888;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  position: absolute;
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+  color:#C9AD85;
+}
+
+/* The dot/bullet/indicator container */
+.dot-container {
+    text-align: center;
+	padding: 20px;
+	color:#C9AD85;
+   
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+/* Add a background color to the active dot/circle */
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Add an italic font style to all quotes */
+q {font-style: italic;}
+
+/* Add a blue color to the author */
+.author {color: cornflowerblue;}
+.back_col{
+	background-color: #3b3d47;
+}
+.padding-setting{
+	padding-top: 50px;
+	padding-bottom:50px;
+}
+.quotes{
+	text-align: right;
+}
+.h2-word{
+	text-align: center;
+	color: #C9AD85;
+	padding-bottom: 20px;
+}
+.padd_set{
+	padding-bottom: 50px;
+	padding-top: 50px;
+}
+.forms{
+	
+}
+.footer{
+	display: inline;
+}
